# In The Name Of God
# ========================================
# [] File Name : CMakeLists.txt
#
# [] Creation Date : 08-05-2015
#
# [] Created By : Parham Alvani (parham.alvani@gmail.com)
# =======================================
add_executable(TCache.out
	block.c cache.c cache_ctl.c common.c fifo.c lru.c main.c set.c)
